Finished contacts layout and functionality

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
             margin: 20px;
             padding: 20px;
             background: black;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
 
         h1 {
@@ -22,7 +20,7 @@
         }
         .app-link {
             display: block;
-            margin: 10px 0;
+            margin: 10px;
             font-size: 1.2em;
             color: whitesmoke;
             text-decoration: none;
