Fixed style continuity on buttons between apps and began refactoring CSS

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="/components/recipe.html" class="app-link">Recipe</a>
         <a href="/components/snake-game.html" class="app-link">Snake Game</a>
         <a href="/components/stop-watch.html" class="app-link">Clock / Stop Watch / Timer / Alarm</a>
+        <a href="/components/to-do.html" class="app-link">To Do List</a>
         <a href="/components/weather.html" class="app-link">Weather</a>
     </div>
 </body>
